force-app/main/default/objects/YTD_Quota_Revenue__c/YTD_Quota_Revenue__c.object-meta.xml
<CustomObject>
    <description>The object stores the data that is re-calculated for every fiscal year</description>
    <label>YTD Quota/Revenue</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>YTD Quota/Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>YTD Quota/Revenues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>