force-app/main/default/objects/YTD_Quota_Revenue__c/fields/Goal_of_monthly_leads_to_achieve_quota__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_monthly_leads_to_achieve_quota__c</fullName>
    <label>Goal # of monthly leads to achieve quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>