force-app/main/default/objects/YTD_Quota_Revenue__c/fields/Goal_of_monthly_opptys_added_to_funnel__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_monthly_opptys_added_to_funnel__c</fullName>
    <label>Goal # of monthly opptys added to funnel</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>