force-app/main/default/objects/YTD_Quota_Revenue__c/fields/Goal_of_wins_to_achieve_monthly_quota__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_wins_to_achieve_monthly_quota__c</fullName>
    <label>Goal # of wins to achieve monthly quota</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>