force-app/main/default/objects/YTD_Quota_Revenue__c/fields/Month_10_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Month_10_Quota_Amount__c</fullName>
    <description>Field to store the quota for the tenth month of the fiscal year</description>
    <label>Month 10 Quota Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>