force-app/main/default/objects/YTD_Quota_Revenue__c/fields/Month_11_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Month_11_Quota_Amount__c</fullName>
    <description>Field to store the quota for the eleventh month of the fiscal year</description>
    <label>Month 11 Quota Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>