force-app/main/default/objects/YTD_Quota_Revenue__c/fields/Monthly_Lead_Added__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Lead_Added__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Lead Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>