force-app/main/default/objects/YTD_Quota_Revenue__c/fields/Monthly_Quota_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Quota_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Quota Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>