force-app/main/default/objects/YTD_Quota_Revenue__c/fields/of_leads_for_1_qualified_oppty__c.field-meta.xml
<CustomField>
    <fullName>of_leads_for_1_qualified_oppty__c</fullName>
    <label># of leads for 1 qualified oppty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>