force-app/main/default/objects/YTD_Quota_Revenue__c/fields/of_leads_for_1_win__c.field-meta.xml
<CustomField>
    <fullName>of_leads_for_1_win__c</fullName>
    <label># of leads for 1 win</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>