force-app/main/default/objects/YTD_Quota_Revenue__c/fields/of_quarterly_leads_to_achieve_quota__c.field-meta.xml
<CustomField>
    <fullName>of_quarterly_leads_to_achieve_quota__c</fullName>
    <label># of quarterly leads to achieve quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>