force-app/main/default/objects/YTD_Quota_Revenue__c/fields/of_wins_to_achieve_annual_quota__c.field-meta.xml
<CustomField>
    <fullName>of_wins_to_achieve_annual_quota__c</fullName>
    <label># of wins to achieve annual quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>