force-app/main/default/objects/YTD_Quota_Revenue__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>YTD Quota/Revenues (Sales Manager)</relationshipLabel>
    <relationshipName>YTD_Quota_Revenues1</relationshipName>
    <type>Lookup</type>
</CustomField>