force-app/main/default/objects/YTD_Quota_Revenue__c/fields/Sales_Rep_Profile__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the sales rep profile to which the quota/revenue record is associated</description>
    <label>Sales Rep Profile</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>YTD Quota/Revenues</relationshipLabel>
    <relationshipName>YTD_Quota_Revenues</relationshipName>
    <type>Lookup</type>
</CustomField>