force-app/main/default/objects/YTD_Quota_Revenue__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>Stores the start date of the fiscal year</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>