force-app/main/default/objects/YTD_Quota_Revenue__c/fields/User_Record__c.field-meta.xml
<CustomField>
    <fullName>User_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the user record that this backup record is associated with</description>
    <label>User Record</label>
    <referenceTo>User</referenceTo>
    <relationshipName>YTD_Quota_Revenues</relationshipName>
    <type>Lookup</type>
</CustomField>