force-app/main/default/objects/YTD_Quota_Revenue__c/fields/X12_Month_Lead_Conv_for_1_oppty__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Lead_Conv_for_1_oppty__c</fullName>
    <label>12 Month Lead Conv % for 1 oppty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>