force-app/main/default/objects/YTD_Quota_Revenue__c/fields/X12_Month_Leads_Added__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Leads_Added__c</fullName>
    <label>12 Month Leads Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>