force-app/main/default/objects/YTD_Quota_Revenue__c/fields/X12_Month_Opprties_Added_to_the_funnel__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Opprties_Added_to_the_funnel__c</fullName>
    <label>12 Month Opprties Added to the funnel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>