force-app/main/default/objects/YTD_Quota_Revenue__c/fields/X12_Month_Rolling_Average_Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Average_Sales_Cycle__c</fullName>
    <label>12 Month Rolling Average Sales Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>