force-app/main/default/objects/YTD_Quota_Revenue__c/fields/YTD_Average_Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>YTD_Average_Sales_Cycle__c</fullName>
    <description>Stores the average sales cycle for the year</description>
    <label>YTD Average Sales Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>