force-app/main/default/objects/YTD_Quota_Revenue__c/fields/YTD_Opportunities_Added__c.field-meta.xml
<CustomField>
    <fullName>YTD_Opportunities_Added__c</fullName>
    <defaultValue>0</defaultValue>
    <label>YTD Opportunities Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>