force-app/main/default/objects/YTD_Quota_Revenue__c/fields/YTD_Opportunities_Won__c.field-meta.xml
<CustomField>
    <fullName>YTD_Opportunities_Won__c</fullName>
    <description>Number of opportunities won by the sales rep in the calendar/fiscal year</description>
    <label>YTD Opportunities Won</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>