force-app/main/default/objects/YTD_Quota_Revenue__c/fields/YTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YTD_Revenue__c</fullName>
    <description>Sum of Revenue from won opportunities in the current fiscal year</description>
    <label>YTD Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>