force-app/main/default/objects/YTD_Quota_Revenue__c/fields/YTD_Revenue_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>YTD_Revenue_Close_Rate__c</fullName>
    <description>Revenue close rate copied from the sales profile object</description>
    <label>YTD Revenue Close Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>