force-app/main/default/objects/YTD_Quota_Revenue__c/fields/YTD_Revenue_Quota_Percent__c.field-meta.xml
<CustomField>
    <fullName>YTD_Revenue_Quota_Percent__c</fullName>
    <description>Revenue quota percent copied from the sales profile object</description>
    <label>YTD Revenue Quota Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>