force-app/main/default/objects/YTD_Quota_Revenue__c/fields/YTD_Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Win_Percentage__c</fullName>
    <description>Win percentage copied from the sales profile object</description>
    <label>YTD Win Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>