force-app/main/default/objects/YTD_Quota_Revenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_date__c</columns>
    <columns>Sales_Rep_Profile__c</columns>
    <columns>YTD_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>