force-app/main/default/objects/YTD_Quota_Revenue__c/listViews/past_year_quota.listView-meta.xml
<ListView>
    <fullName>past_year_quota</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep_Profile__c</columns>
    <columns>Annual_Quota_Amount__c</columns>
    <columns>Month_10_Quota_Amount__c</columns>
    <columns>Month_11_Quota_Amount__c</columns>
    <columns>Month_12_Quota_Amount__c</columns>
    <columns>Month_1_Quota_Amount__c</columns>
    <columns>Month_2_Quota_Amount__c</columns>
    <columns>Month_3_Quota_Amount__c</columns>
    <columns>Month_4_Quota_Amount__c</columns>
    <columns>Month_5_Quota_Amount__c</columns>
    <columns>Month_6_Quota_Amount__c</columns>
    <columns>Month_7_Quota_Amount__c</columns>
    <columns>Month_8_Quota_Amount__c</columns>
    <columns>Month_9_Quota_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Rep_Profile__c</field>
        <operation>contains</operation>
        <value>Carine</value>
    </filters>
    <label>past year quota</label>
</ListView>